# EnteeZ

./: .gitignore  CMakeLists.txt  ECS.xml  LICENSE  README.md  build_cmake.bat  build_cmake_debug.bat  build_cmake_release.bat  build_cmake_vs_32.bat
EnteeZ/: CMakeLists.txt
EnteeZ-demo/: CMakeLists.txt
EnteeZ-demo/include/: TestComponent.hpp
EnteeZ-demo/src/: main.cpp
EnteeZ/include/EnteeZ/: BaseComponentWrapper.hpp  Bases.hpp  BitHandler.hpp  ComponentWrapper.hpp  EnteeZ.hpp  Entity.hpp  EntityManager.hpp  TemplateBase.hpp  TemplatePair.hpp  TemplateStorage.hpp
EnteeZ/src/: BaseComponentWrapper.cpp  BitHandler.cpp  ComponentWrapper.cpp  EnteeZ.cpp  Entity.cpp  EntityManager.cpp  TemplateBase.cpp  TemplatePair.cpp  TemplateStorage.cpp
